--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -20,6 +20,17 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: hello-world-windows
+spec:
+  type: LoadBalancer
+  selector:
+    app: hello-world-windows
+  ports:
+    - port: 80
+      targetPort: 30080
 
 
