--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -19,18 +19,17 @@ spec:
         image: k8syns/hello-world-windows:{{tag}}
         imagePullPolicy: Always
         ports:
-        - containerPort: 30080
+        - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: hello-world-windows
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: hello-world-windows
   ports:
-    - port: 30080
-      targetPort: 30080
-
-
+    - port: 8080          # porta do Service
+      targetPort: 8080   # porta do container
+      nodePort: 32080    # porta exposta no node
