--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,11 +16,11 @@ spec:
         kubernetes.io/os: windows
       containers:
       - name: hello-world
-        image: k8syns/hello-world-windows:{{tag}}
+        image: k8syns/hello-world-windows:75
         imagePullPolicy: Always
         ports:
         - containerPort: 80
-      resources:
+        resources:
           requests:
             cpu: "200m"
             memory: "256Mi"
