--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -28,6 +28,25 @@ spec:
             cpu: "500m"
             memory: "512Mi"
 ---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: hello-world-windows-hpa
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: hello-world-windows
+  minReplicas: 2
+  maxReplicas: 6
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 70
+---
 apiVersion: v1
 kind: Service
 metadata:
