--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         kubernetes.io/os: windows
       containers:
       - name: hello-world
-        image: k8syns/hello-world-windows:75
+        image: k8syns/hello-world-windows:{{tag}}
         imagePullPolicy: Always
         ports:
         - containerPort: 80
