--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -20,6 +20,11 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 80
+          env:
+          - name: POD_NAME
+            valueFrom:
+             fieldRef:
+              fieldPath: metadata.name
         resources:
           requests:
             cpu: "200m"
